feat: atualizando detalhes aeronáuticos e layout do card logístico

--- a/index.html
+++ b/index.html
@@ -561,6 +561,14 @@
                                     <span class="spec-label">Escopo</span>
                                     <span class="spec-value">14 Estaduais</span>
                                 </div>
+                                <div class="spec-item">
+                                    <span class="spec-label">AERONAVE</span>
+                                    <span class="spec-value">Robinson 44 (R$ 6.500/h)</span>
+                                </div>
+                                <div class="spec-item">
+                                    <span class="spec-label">CAPACIDADE TÉCNICA</span>
+                                    <span class="spec-value">45 Horas de Voo (~9.000 km)</span>
+                                </div>
                             </div>
 
                             <div class="shared-justification">
